tranformed section to header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Site Template</title>
   </head>
   <body>
-    <section class="main">
+    <header class="main">
       <div class="container">
         <div class="navigation">
           <div class="logo">
@@ -45,13 +45,13 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
               commodo cursus magna vel scelerisque nisl consectetur et.
             </p>
-            <div class="main__link">
+            <div class="main__link main__link--active">
               <a href="#">Find Out More</a>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </header>
 
     <script type="module" src="./src/js/index.js"></script>
   </body>
