--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
               ACTIVE<span class="logo__text--highlited">BOX</span>
             </p>
           </div>
+          <button class="navigation--open-menu navigation--open-menu--active">
+            <img src="./src/images/open_menu.png" alt="open_menu" />
+          </button>
+          <button class="navigation--close-menu">
+            <img src="./src/images/close_menu.png" alt="close_menu" />
+          </button>
           <nav>
             <ul class="navigation-list">
               <li class="navigation-list__item">
