--- a/index.html
+++ b/index.html
@@ -59,6 +59,52 @@
       </div>
     </header>
 
+    <!-- <div class="container">
+        <div class="content">
+          <div class="social-buttons">
+            <div class="location">
+              <p class="location__title">Location</p>
+              <p class="location__address">
+                3481 Melrose Place Beverly Hills, CA 90210
+              </p>
+            </div>
+            <ul class="social-buttons-list">
+              <li class="social-buttons-list__button">
+                <a href="#" class="facebook">
+                  <i class="fa-brands fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="social-buttons-list__button">
+                <a href="#" class="twitter">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+              </li>
+              <li class="social-buttons-list__button">
+                <a href="#" class="linkdein">
+                  <i class="fa-brands fa-linkedin"></i>
+                </a>
+              </li>
+            </ul>
+            <div class="about">
+              <p class="about--title">About ActiveBox</p>
+              <p class="about--description">
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                Donec ullamcorper nulla non metus auctor fringilla.
+              </p>
+            </div>
+          </div> -->
+
+    <footer class="footer">
+      <div class="container">
+        <div class="copyright">
+          <p class="copyright__text">
+            Copyright © 2015 ActiveBox.All Rights Reserved Made with
+            <span class="copyright__text--highlighted">by Kamal Chaneman</span>
+          </p>
+        </div>
+      </div>
+    </footer>
+
     <script type="module" src="./src/js/index.js"></script>
   </body>
 </html>
