added social buttons block

--- a/index.html
+++ b/index.html
@@ -59,15 +59,17 @@
       </div>
     </header>
 
-    <!-- <div class="container">
+    <section class="social-buttons">
+      <div class="container">
         <div class="content">
-          <div class="social-buttons">
-            <div class="location">
-              <p class="location__title">Location</p>
-              <p class="location__address">
-                3481 Melrose Place Beverly Hills, CA 90210
-              </p>
-            </div>
+          <div class="location">
+            <p class="location__title">Location</p>
+            <p class="location__address">
+              3481 Melrose Place Beverly Hills, CA 90210
+            </p>
+          </div>
+          <div class="social-buttons-contacts">
+            <p class="social-buttons-contacts__title">Share with Love</p>
             <ul class="social-buttons-list">
               <li class="social-buttons-list__button">
                 <a href="#" class="facebook">
@@ -85,14 +87,17 @@
                 </a>
               </li>
             </ul>
-            <div class="about">
-              <p class="about--title">About ActiveBox</p>
-              <p class="about--description">
-                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-                Donec ullamcorper nulla non metus auctor fringilla.
-              </p>
-            </div>
-          </div> -->
+          </div>
+          <div class="about">
+            <p class="about__title">About ActiveBox</p>
+            <p class="about__description">
+              Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec
+              ullamcorper nulla non metus auctor fringilla.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <footer class="footer">
       <div class="container">
