added interior block

--- a/index.html
+++ b/index.html
@@ -59,6 +59,69 @@
       </div>
     </header>
 
+    <div class="interior">
+      <ul class="interior-list interior-list__firts-row">
+        <li class="interior-list__item">
+          <div class="item-data">
+            <p class="item-data__title">Project Name</p>
+            <p class="item-data__description">User Interface Design</p>
+          </div>
+          <img src="./src/images/interior_1.jpg" alt="interior_1" />
+        </li>
+        <li class="interior-list__item">
+          <div class="item-data">
+            <p class="item-data__title">Project Name</p>
+            <p class="item-data__description">User Interface Design</p>
+          </div>
+          <img src="./src/images/interior_2.jpg" alt="interior_2" />
+        </li>
+        <li class="interior-list__item">
+          <div class="item-data">
+            <p class="item-data__title">Project Name</p>
+            <p class="item-data__description">User Interface Design</p>
+          </div>
+          <img src="./src/images/interior_3.jpg" alt="interior_3" />
+        </li>
+        <li class="interior-list__item">
+          <div class="item-data">
+            <p class="item-data__title">Project Name</p>
+            <p class="item-data__description">User Interface Design</p>
+          </div>
+          <img src="./src/images/interior_4.jpg" alt="interior_4" />
+        </li>
+      </ul>
+      <ul class="interior-list interior-list__second-row">
+        <li class="interior-list__item">
+          <div class="item-data">
+            <p class="item-data__title">Project Name</p>
+            <p class="item-data__description">User Interface Design</p>
+          </div>
+          <img src="./src/images/interior_5.jpg" alt="interior_5" />
+        </li>
+        <li class="interior-list__item">
+          <div class="item-data">
+            <p class="item-data__title">Project Name</p>
+            <p class="item-data__description">User Interface Design</p>
+          </div>
+          <img src="./src/images/interior_6.jpg" alt="interior_6" />
+        </li>
+        <li class="interior-list__item interior-list__item--active">
+          <div class="item-data item-data--active">
+            <p class="item-data__title">Project Name</p>
+            <p class="item-data__description">User Interface Design</p>
+          </div>
+          <img src="./src/images/interior_7.jpg" alt="interior_7" />
+        </li>
+        <li class="interior-list__item">
+          <div class="item-data">
+            <p class="item-data__title">Project Name</p>
+            <p class="item-data__description">User Interface Design</p>
+          </div>
+          <img src="./src/images/interior_8.jpg" alt="interior_8" />
+        </li>
+      </ul>
+    </div>
+
     <section class="social-buttons">
       <div class="container">
         <div class="content">
