added donwload block

--- a/index.html
+++ b/index.html
@@ -122,6 +122,19 @@
       </ul>
     </div>
 
+    <section class="download">
+      <div class="container">
+        <h1>Are You Ready to Start? Download Now For Free!</h1>
+        <div class="description">
+          <p>Fusce dapibus, tellus ac cursus commodo</p>
+        </div>
+
+        <div class="download__link download__link--active">
+          <a href="#">download here</a>
+        </div>
+      </div>
+    </section>
+
     <section class="social-buttons">
       <div class="container">
         <div class="content">
