--- a/index.html
+++ b/index.html
@@ -60,64 +60,78 @@
     </header>
 
     <div class="interior">
-      <ul class="interior-list interior-list__firts-row">
+      <ul class="interior-list">
         <li class="interior-list__item">
           <div class="item-data">
             <p class="item-data__title">Project Name</p>
             <p class="item-data__description">User Interface Design</p>
           </div>
-          <img src="./src/images/interior_1.jpg" alt="interior_1" />
+          <a href="#" alt="interior_1">
+            <img src="./src/images/interior_1.jpg" alt="interior_1" />
+          </a>
         </li>
         <li class="interior-list__item">
           <div class="item-data">
             <p class="item-data__title">Project Name</p>
             <p class="item-data__description">User Interface Design</p>
           </div>
-          <img src="./src/images/interior_2.jpg" alt="interior_2" />
+          <a href="#" alt="interior_2">
+            <img src="./src/images/interior_2.jpg" alt="interior_2" />
+          </a>
         </li>
         <li class="interior-list__item">
           <div class="item-data">
             <p class="item-data__title">Project Name</p>
             <p class="item-data__description">User Interface Design</p>
           </div>
-          <img src="./src/images/interior_3.jpg" alt="interior_3" />
+          <a href="#" alt="interior_3">
+            <img src="./src/images/interior_3.jpg" alt="interior_3" />
+          </a>
         </li>
         <li class="interior-list__item">
           <div class="item-data">
             <p class="item-data__title">Project Name</p>
             <p class="item-data__description">User Interface Design</p>
           </div>
-          <img src="./src/images/interior_4.jpg" alt="interior_4" />
-        </li>
-      </ul>
-      <ul class="interior-list interior-list__second-row">
-        <li class="interior-list__item">
-          <div class="item-data">
-            <p class="item-data__title">Project Name</p>
-            <p class="item-data__description">User Interface Design</p>
-          </div>
-          <img src="./src/images/interior_5.jpg" alt="interior_5" />
+          <a href="#" alt="interior_4">
+            <img src="./src/images/interior_4.jpg" alt="interior_4" />
+          </a>
         </li>
         <li class="interior-list__item">
           <div class="item-data">
             <p class="item-data__title">Project Name</p>
             <p class="item-data__description">User Interface Design</p>
           </div>
-          <img src="./src/images/interior_6.jpg" alt="interior_6" />
+          <a href="#" alt="interior_5">
+            <img src="./src/images/interior_5.jpg" alt="interior_5" />
+          </a>
+        </li>
+        <li class="interior-list__item">
+          <div class="item-data">
+            <p class="item-data__title">Project Name</p>
+            <p class="item-data__description">User Interface Design</p>
+          </div>
+          <a href="#" alt="interior_6">
+            <img src="./src/images/interior_6.jpg" alt="interior_6" />
+          </a>
         </li>
         <li class="interior-list__item interior-list__item--active">
           <div class="item-data item-data--active">
             <p class="item-data__title">Project Name</p>
             <p class="item-data__description">User Interface Design</p>
           </div>
-          <img src="./src/images/interior_7.jpg" alt="interior_7" />
+          <a href="#" alt="interior_7">
+            <img src="./src/images/interior_7.jpg" alt="interior_7" />
+          </a>
         </li>
         <li class="interior-list__item">
           <div class="item-data">
             <p class="item-data__title">Project Name</p>
             <p class="item-data__description">User Interface Design</p>
           </div>
-          <img src="./src/images/interior_8.jpg" alt="interior_8" />
+          <a href="#" alt="interior_8">
+            <img src="./src/images/interior_8.jpg" alt="interior_8" />
+          </a>
         </li>
       </ul>
     </div>
