added advantages block

--- a/index.html
+++ b/index.html
@@ -59,6 +59,105 @@
       </div>
     </header>
 
+    <section class="advantages">
+      <div class="container">
+        <div class="content">
+          <div class="advantages__item advantages__item--easily-customized">
+            <div class="item-image item-image--easily-customized">
+              <img alt="easily-customized" src="./src/images/icon_1.png" />
+            </div>
+            <div class="item-title item-title--easily-customized">
+              <p>Easily Customised</p>
+            </div>
+            <div class="item-description item-description--easily-customized">
+              <p>
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                Nullam quis risus eget urna mollis ornare vel eu leo. Donec
+                ullamcorper nulla non metus auctor fringilla.
+              </p>
+            </div>
+          </div>
+          <div class="advantages__item advantages__item--responsive-ready">
+            <div class="item-image item-image--responsive-ready">
+              <img alt="responsive-ready" src="./src/images/icon_2.png" />
+            </div>
+            <div class="item-title item-title--responsive-ready">
+              <p>Responsive Ready</p>
+            </div>
+            <div class="item-description item-description--responsive-ready">
+              <p>
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                Nullam quis risus eget urna mollis ornare vel eu leo. Donec
+                ullamcorper nulla non metus auctor fringilla.
+              </p>
+            </div>
+          </div>
+          <div class="advantages__item advantages__item--modern-design">
+            <div class="item-image item-image--modern-design">
+              <img alt="modern-design" src="./src/images/icon_3.png" />
+            </div>
+            <div class="item-title item-title--modern-design">
+              <p>Modern Design</p>
+            </div>
+            <div class="item-description item-description--modern-design">
+              <p>
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                Nullam quis risus eget urna mollis ornare vel eu leo. Donec
+                ullamcorper nulla non metus auctor fringilla.
+              </p>
+            </div>
+          </div>
+          <div class="advantages__item advantages__item--clean-code">
+            <div class="item-image item-image--clean-code">
+              <img alt="clean-code" src="./src/images/icon_4.png" />
+            </div>
+            <div class="item-title item-title--clean-code">
+              <p>Clean Code</p>
+            </div>
+            <div class="item-description item-description--clean-code">
+              <p>
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                Nullam quis risus eget urna mollis ornare vel eu leo. Donec
+                ullamcorper nulla non metus auctor fringilla.
+              </p>
+            </div>
+          </div>
+          <div class="advantages__item advantages__item--ready-to-ship">
+            <div class="item-image item-image--ready-to-ship">
+              <img alt="ready-to-ship" src="./src/images/icon_5.png" />
+            </div>
+            <div class="item-title item-title--ready-to-ship">
+              <p>Ready to Ship</p>
+            </div>
+            <div class="item-description item-description--ready-to-ship">
+              <p>
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                Nullam quis risus eget urna mollis ornare vel eu leo. Donec
+                ullamcorper nulla non metus auctor fringilla.
+              </p>
+            </div>
+          </div>
+          <div class="advantages__item advantages__item--download-for-free">
+            <div class="item-image item-image--download-for-free">
+              <img alt="download-for-free" src="./src/images/icon_6.png" />
+            </div>
+            <div class="item-title item-title--download-for-free">
+              <p>Download for Free</p>
+            </div>
+            <div
+              class="item-description item-description--download-for-free-item"
+            >
+              <p>
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                Nullam quis risus eget urna mollis ornare vel eu leo. Donec
+                ullamcorper nulla non metus auctor fringilla.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <div class="interior">
       <ul class="interior-list">
         <li class="interior-list__item">
