--- a/index.html
+++ b/index.html
@@ -235,6 +235,157 @@
       </ul>
     </div>
 
+    <section class="workers">
+      <div class="container">
+        <div class="content">
+          <div class="worker-card">
+            <div class="worker-card__photo">
+              <img alt="Ruth Woods" src="./src/images/avatar_1.jpg" />
+            </div>
+            <div class="worker-card__title">
+              <p>Ruth Woods</p>
+            </div>
+            <div class="worker-card__job-position">
+              <p>founder, ceo</p>
+            </div>
+            <div class="worker-card__about">
+              <p>
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus.
+                Maecenas sed diam eget risus varius blandit sit amet non magna.
+                Nullam quis risus eget urna mollis ornare vel eu leo.
+              </p>
+            </div>
+            <ul class="worker-card__social-buttons">
+              <li class="worker-card__button">
+                <a href="#" class="facebook">
+                  <i class="fa-brands fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="worker-card__button">
+                <a href="#" class="twitter">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+              </li>
+              <li class="worker-card__button">
+                <a href="#" class="linkdein">
+                  <i class="fa-brands fa-linkedin"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="worker-card">
+            <div class="worker-card__photo">
+              <img alt="Timothy Reed" src="./src/images/avatar_2.jpg" />
+            </div>
+            <div class="worker-card__title">
+              <p>Timothy Reed</p>
+            </div>
+            <div class="worker-card__job-position">
+              <p>co-founder, developer</p>
+            </div>
+            <div class="worker-card__about">
+              <p>
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus.
+                Maecenas sed diam eget risus varius blandit sit amet non magna.
+                Nullam quis risus eget urna mollis ornare vel eu leo.
+              </p>
+            </div>
+            <ul class="worker-card__social-buttons">
+              <li class="worker-card__button">
+                <a href="#" class="facebook">
+                  <i class="fa-brands fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="worker-card__button">
+                <a href="#" class="twitter">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+              </li>
+              <li class="worker-card__button">
+                <a href="#" class="linkdein">
+                  <i class="fa-brands fa-linkedin"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="worker-card">
+            <div class="worker-card__photo">
+              <img alt="Victoria Vladez" src="./src/images/avatar_3.jpg" />
+            </div>
+            <div class="worker-card__title">
+              <p>Victoria Vladez</p>
+            </div>
+            <div class="worker-card__job-position">
+              <p>ui designerr</p>
+            </div>
+            <div class="worker-card__about">
+              <p>
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus.
+                Maecenas sed diam eget risus varius blandit sit amet non magna.
+                Nullam quis risus eget urna mollis ornare vel eu leo.
+              </p>
+            </div>
+            <ul class="worker-card__social-buttons">
+              <li class="worker-card__button">
+                <a href="#" class="facebook">
+                  <i class="fa-brands fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="worker-card__button">
+                <a href="#" class="twitter">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+              </li>
+              <li class="worker-card__button">
+                <a href="#" class="linkdein">
+                  <i class="fa-brands fa-linkedin"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="worker-card">
+            <div class="worker-card__photo">
+              <img alt="Beverly Little" src="./src/images/avatar_4.jpg" />
+            </div>
+            <div class="worker-card__title">
+              <p>Beverly Little</p>
+            </div>
+            <div class="worker-card__job-position">
+              <p>data scientist</p>
+            </div>
+            <div class="worker-card__about">
+              <p>
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus.
+                Maecenas sed diam eget risus varius blandit sit amet non magna.
+                Nullam quis risus eget urna mollis ornare vel eu leo.
+              </p>
+            </div>
+            <ul class="worker-card__social-buttons">
+              <li class="worker-card__button">
+                <a href="#" class="facebook">
+                  <i class="fa-brands fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="worker-card__button">
+                <a href="#" class="twitter">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+              </li>
+              <li class="worker-card__button">
+                <a href="#" class="linkdein">
+                  <i class="fa-brands fa-linkedin"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="download">
       <div class="container">
         <h1>Are You Ready to Start? Download Now For Free!</h1>
