added slider block

--- a/index.html
+++ b/index.html
@@ -386,6 +386,67 @@
       </div>
     </section>
 
+    <section class="slider">
+      <div class="container">
+        <div class="slider-content">
+          <div class="slider-wrapper">
+            <div class="slider__item">
+              <div class="slider__image">
+                <img alt="third-slider" src="./src/images/slider_1.jpg" />
+              </div>
+              <div class="slider__description">
+                <div class="title">
+                  <p>
+                    “Integer posuere erat a ante venenatis dapibus posuere velit
+                    aliquet. Donec sed odio dui. Aenean eu leo quam...”
+                  </p>
+                </div>
+                <div class="autor">
+                  <p>Susan Sims, Interaction Designer at XYZ</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider-wrapper">
+            <div class="slider__item">
+              <div class="slider__image">
+                <img alt="third-slider" src="./src/images/slider_2.jpg" />
+              </div>
+              <div class="slider__description">
+                <div class="title">
+                  <p>
+                    “Integer posuere erat a ante venenatis dapibus posuere velit
+                    aliquet. Donec sed odio dui. Aenean eu leo quam...”
+                  </p>
+                </div>
+                <div class="autor">
+                  <p>Susan Sims, Interaction Designer at XYZ</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider-wrapper">
+            <div class="slider__item">
+              <div class="slider__image">
+                <img alt="third-slider" src="./src/images/slider_3.jpg" />
+              </div>
+              <div class="slider__description">
+                <div class="title">
+                  <p>
+                    “Integer posuere erat a ante venenatis dapibus posuere velit
+                    aliquet. Donec sed odio dui. Aenean eu leo quam...”
+                  </p>
+                </div>
+                <div class="autor">
+                  <p>Susan Sims, Interaction Designer at XYZ</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="download">
       <div class="container">
         <h1>Are You Ready to Start? Download Now For Free!</h1>
@@ -449,7 +510,6 @@
         </div>
       </div>
     </footer>
-
     <script type="module" src="./src/js/index.js"></script>
   </body>
 </html>
