--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                   aliquet. Donec sed odio dui. Aenean eu leo quam...”
                 </p>
               </div>
-              <div class="autor">
+              <div class="author">
                 <p>Susan Sims, Interaction Designer at XYZ</p>
               </div>
             </div>
@@ -418,7 +418,7 @@
                   aliquet. Donec sed odio dui. Aenean eu leo quam...”
                 </p>
               </div>
-              <div class="autor">
+              <div class="author">
                 <p>Susan Sims, Interaction Designer at XYZ</p>
               </div>
             </div>
@@ -436,7 +436,7 @@
                   aliquet. Donec sed odio dui. Aenean eu leo quam...”
                 </p>
               </div>
-              <div class="autor">
+              <div class="author">
                 <p>Susan Sims, Interaction Designer at XYZ</p>
               </div>
             </div>
