--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </div>
     </section>
 
-    <div class="interior">
+    <section class="interior">
       <ul class="interior-list">
         <li class="interior-list__item">
           <div class="item-data">
@@ -233,7 +233,7 @@
           </a>
         </li>
       </ul>
-    </div>
+    </section>
 
     <section class="workers">
       <div class="container">
